Fixed backround position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1916,3 +1916,11 @@ font-weight: 300;
   font-weight: 300;
   color: #fff;
 }
+
+
+
+@media screen and (max-width: 768px) {
+  header#fh5co-header {
+    background-position: -150px 0px !important;
+  }
+}
